fixed icons on rebar and concrete pages, spacing on the services boxes, moved the dark background back to where it's supposed to be

--- a/css/concrete.css
+++ b/css/concrete.css
@@ -34,10 +34,11 @@
 
 .landing-text h1 {
     padding-top: 0;
+    padding-left: 40px;
     margin: 40px auto;
     font-size: 1.875em;
     border-left: 5px solid var(--primary);
-    text-align: right;
+    text-align: left;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     width: 280px;
@@ -82,7 +83,7 @@
     background: var(--primary);
     width: 50px;
     height: 2px;
-    left: 150px;
+    left: 200px;
     top: 60px;
 }
 
@@ -92,7 +93,7 @@
     background: var(--primary);
     width: 30px;
     height: 2px;
-    left: 150px;
+    left: 200px;
     top: 69px;
 }
 
@@ -149,6 +150,14 @@
     position: relative;
     z-index: 5;
     padding-bottom: 100px;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+            align-items: center;
 }
 
 .stat-item h3 {
@@ -156,6 +165,7 @@
     text-align: center;
     text-transform: uppercase;
     font-size: 1.5em;
+    margin-bottom: 0;
 }
 
 .stat-item p {
@@ -324,6 +334,7 @@
 
 .valley-exterior {
     margin-bottom: 100px;
+    width: 100%;
 }
 
 .clippy-sales {
