--- a/css/rebar-fabrication.css
+++ b/css/rebar-fabrication.css
@@ -146,6 +146,8 @@
 }
 
 .stat-item {
+    width: 300px;
+    margin: auto;
     position: relative;
     z-index: 5;
     padding-bottom: 100px;
@@ -166,6 +168,7 @@
     text-align: center;
     text-transform: uppercase;
     font-size: 1.5em;
+    margin-bottom: 0;
 }
 
 .stat-item p {
@@ -334,6 +337,7 @@
 
 .valley-exterior {
     margin-bottom: 100px;
+    width: 100%;
 }
 
 .clippy-sales {
